; ModuleID = '/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib.c_inflate_rsrc_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib.c_inflate_rsrc_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@le_inflate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inflate_rsrc_dtor(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @le_inflate, align 4
  %6 = call i32* @zend_fetch_resource(i32* %4, i32* null, i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32* %7 to %struct.TYPE_2__*
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = bitcast i32* %13 to %struct.TYPE_2__*
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @efree(i32* %16)
  br label %18

18:                                               ; preds = %12, %1
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @inflateEnd(i32* %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @efree(i32* %21)
  ret void
}

declare dso_local i32* @zend_fetch_resource(i32*, i32*, i32) #1

declare dso_local i32 @efree(i32*) #1

declare dso_local i32 @inflateEnd(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
